
===========
Changes log  
===========


@version-full@ (@release-date@)
[Bugs fixed]
 - 

[Enhancements] 
 - Added a getApplication() method to Context and Resource classes.
 - Upgraded Apache MINA to version 1.1.0.
