@@ -52,6 +52,8 @@ import org.restlet.util.Helper;
 
 import com.noelios.restlet.application.ApplicationHelper;
 import com.noelios.restlet.component.ComponentHelper;
+import com.noelios.restlet.http.StreamClientHelper;
+import com.noelios.restlet.http.StreamServerHelper;
 import com.noelios.restlet.local.DirectoryResource;
 import com.noelios.restlet.util.FormUtils;
 
@@ -102,6 +104,11 @@ public class Engine extends org.restlet.util.Engine {
     @SuppressWarnings("unchecked")
     public Engine(boolean discoverConnectors) {
         if (discoverConnectors) {
+            // Register the default connectors that will be used if no
+            // other connector has been found
+            getRegisteredClients().add(new StreamClientHelper(null));
+            getRegisteredServers().add(new StreamServerHelper(null));
+
             // Find the factory class name
             String line = null;
             String provider = null;
