@@ -6,7 +6,6 @@ Bundle-Version: 1.0.0
 Bundle-Vendor: Noelios Consulting
 Bundle-Localization: plugin
 Export-Package: org.restlet.example
-Require-Bundle: com.noelios.restlet.ext.jetty,
- com.noelios.restlet.ext.net,
- org.restlet.ext.json,
- com.db4o
+Require-Bundle: com.db4o,
+ com.noelios.restlet,
+ org.restlet.ext.json
