@@ -11,4 +11,9 @@ Changes log
 [Enhancements] 
  - Added a getApplication() method to Context and Resource classes.
  - Upgraded Apache MINA to version 1.1.0.
-
+ - There are now default internal HTTP client and server connectors exposed in the NRE core.
+   If no other HTTP connectors are found in the classpath, those connectors will be used.
+   They should perform reasonably under normal workloads but won't be as scalable as the
+   NIO based connectors such as Grizzly and MINA based ones. You don't have anything to do
+   to configure them, just put the com.noelios.restlet.jar in your classpath along with the
+   Restlet API's JAR. Note that they don't support HTTPS and persistent connections.
